--- a/style.css
+++ b/style.css
@@ -25,25 +25,24 @@ body {
 }
 
 .video-container {
-  position: relative;
-  padding-bottom: 56.25%;
+  /* position: relative; */
+  /*padding-bottom: 56.25%;*/
   /* Proporção 16:9 */
-  height: 0;
+  /* display: block;
+  height: 100%;
   overflow: hidden;
-  max-width: 100%;
-  /* background: #000; -- Removido para depuração */
-  border-radius: 0.5rem;
-  /* rounded-lg */
-  border: 1px solid #e5e7eb;
+  max-width: 100%; */
+  /* background: #000; -- Removido para depuração
+  border-radius: 0.5rem; */
+  /* rounded-lg
+  border: 1px solid #e5e7eb; */
   /* Adicionada uma borda sutil para visualização */
 }
 
+
 .video-container iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
 }
 
 ::-webkit-scrollbar {
